feat: api obtener permissions
